--- a/app/src/main/res/drawable-hdpi/bordered_button.xml
+++ b/app/src/main/res/drawable-hdpi/bordered_button.xml
@@ -5,7 +5,7 @@
             <!-- background -->
             <solid android:color="@android:color/transparent" />
             <!-- border -->
-            <stroke android:width="2dp" android:color="@color/greenColor" />
+            <stroke android:width="2dp" android:color="@color/design_default_color_primary" />
 
             <!-- corner roundness -->
             <corners android:radius="2dp" />
