--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:text="@{viewModel.runningDate}"
+            android:background="@drawable/bordered_button2"
             app:layout_constraintBottom_toTopOf="@+id/running_create_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -53,7 +54,7 @@
 
         <EditText
             android:id="@+id/running_distance"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
@@ -67,18 +68,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/running_name" />
+        <TextView
+            android:id="@+id/running_distance_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Running distance, km"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="@+id/running_distance"
+            app:layout_constraintStart_toStartOf="@+id/running_distance"
+            app:layout_constraintTop_toBottomOf="@+id/running_distance" />
 
         <TextView
             android:id="@+id/running_speed"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:ems="10"
-            android:textColor="@android:color/holo_green_light"
             android:text="@{viewModel.runningSpeed}"
             android:textAlignment="center"
+            android:textColor="@android:color/holo_green_light"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/running_distance" />
         <View
@@ -94,19 +104,19 @@
             android:id="@+id/running_speed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:text="Speed"
             android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/running_speed_bottom_line"
+            app:layout_constraintStart_toStartOf="@+id/running_speed_bottom_line"
             app:layout_constraintTop_toBottomOf="@+id/running_speed_bottom_line" />
 
         <EditText
             android:id="@+id/running_time"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="10"
@@ -115,39 +125,34 @@
             android:textColor="@android:color/holo_green_light"
             android:textSize="24sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_speed_text" />
+            app:layout_constraintEnd_toStartOf="@+id/running_calories"
+            app:layout_constraintHorizontal_bias="0.418"
+            app:layout_constraintStart_toEndOf="@+id/running_speed"
+            app:layout_constraintTop_toBottomOf="@+id/running_distance_text" />
 
         <TextView
             android:id="@+id/running_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:text="Running time"
             android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/running_time"
+            app:layout_constraintStart_toStartOf="@+id/running_time"
             app:layout_constraintTop_toBottomOf="@+id/running_time" />
 
         <TextView
             android:id="@+id/running_calories"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:text="@{viewModel.runningCalories}"
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_time_text" />
+            app:layout_constraintTop_toBottomOf="@+id/running_distance" />
         <View
             android:id="@+id/running_calories_bottom_line"
             android:layout_width="0dp"
@@ -161,19 +166,17 @@
             android:id="@+id/running_calories_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:text="Calories lost"
             android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/running_calories_bottom_line"
+            app:layout_constraintStart_toStartOf="@+id/running_calories_bottom_line"
             app:layout_constraintTop_toBottomOf="@+id/running_calories_bottom_line" />
 
         <EditText
             android:id="@+id/running_comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
             android:ems="10"
             android:inputType="textMultiLine"
             android:maxLength="50"
@@ -181,9 +184,9 @@
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
             android:theme="@style/MyEditTextTheme"
+            app:layout_constraintBottom_toTopOf="@+id/running_date_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_calories_text" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
 
